--- a/package.json
+++ b/package.json
@@ -7,15 +7,32 @@
 		"start": "npx if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
 		"start:prod": "node server.js",
 		"start:dev": "npx concurrently \"npx nodemon --ignore 'client/*'\" \"npm run client\"",
-		"client": "cd client && npm run start"
+		"client": "cd client && npm run start",
+		"lint": "eslint .",
+		"lint:fix": "eslint --fix"
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
 		"concurrently": "^6.2.0",
+		"dotenv": "^9.0.0",
 		"express": "^4.17.1",
+		"mysql2": "^2.2.5",
 		"nodemon": "^2.0.9"
+	},
+	"devDependencies": {
+		"eslint": "^7.12.1",
+		"eslint-config-prettier": "^6.15.0",
+		"prettier": "^2.1.2"
+	},
+	"eslintConfig": {
+		"indent": 4
+	},
+	"prettier": {
+		"singleQuote": true,
+		"tabWidth": 4,
+		"printWidth": 160
 	},
 	"c": "proxy"
 }
