--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
 		"start:prod": "node server.js",
 		"start:dev": "npx concurrently \"npx nodemon --ignore 'client/*'\" \"npm run client\"",
 		"client": "cd client && npm run start",
+		"build": "cd client && npm run build",
+		"heroku-postbuild": "npm run build",
 		"lint": "eslint .",
 		"lint:fix": "eslint --fix"
 	},
