--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "dummy",
 	"version": "1.0.0",
 	"description": "",
-	"main": "index.js",
+	"main": "server.js",
 	"scripts": {
 		"start": "npx if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
 		"start:prod": "node server.js",
