--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"start": "npx if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
 		"start:prod": "node server.js",
 		"start:dev": "npx concurrently \"npx nodemon --ignore 'client/*'\" \"npm run client\"",
+		"install": "cd client && npm install",
 		"client": "cd client && npm run start",
 		"build": "cd client && npm run build",
 		"heroku-postbuild": "npm run build",
