--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "server.js",
 	"engines": {
 		"node": "14.x"
-	  },
+	},
 	"scripts": {
 		"start": "npx if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
 		"start:prod": "node server.js",
@@ -21,11 +21,15 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"compression": "^1.7.4",
 		"concurrently": "^6.2.0",
-		"dotenv": "^9.0.0",
+		"connect-session-sequelize": "^7.1.1",
+		"dotenv": "^9.0.2",
 		"express": "^4.17.1",
+		"express-session": "^1.17.2",
 		"mysql2": "^2.2.5",
-		"nodemon": "^2.0.9"
+		"nodemon": "^2.0.9",
+		"sequelize": "^6.6.5"
 	},
 	"devDependencies": {
 		"eslint": "^7.12.1",
