--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"dotenv": "^9.0.2",
 		"express": "^4.17.1",
 		"express-session": "^1.17.2",
+		"if-env": "^1.0.4",
 		"mysql2": "^2.2.5",
 		"nodemon": "^2.0.9",
 		"sequelize": "^6.6.5"
