User Authentication Set Up

--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
 	"license": "ISC",
 	"dependencies": {
 		"axios": "^0.21.1",
+		"bcrypt": "^5.0.1",
 		"compression": "^1.7.4",
 		"concurrently": "^6.2.0",
 		"connect-session-sequelize": "^7.1.1",
 		"dotenv": "^9.0.2",
 		"express": "^4.17.1",
 		"express-session": "^1.17.2",
+		"jsonwebtoken": "^8.5.1",
 		"mysql2": "^2.2.5",
 		"nodemon": "^2.0.9",
 		"sequelize": "^6.6.5"
@@ -44,6 +46,5 @@
 		"singleQuote": true,
 		"tabWidth": 4,
 		"printWidth": 160
-	},
-	"c": "proxy"
+	}
 }
