--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 	"license": "ISC",
 	"dependencies": {
 		"axios": "^0.21.1",
+		"bcrypt": "^5.0.1",
 		"compression": "^1.7.4",
 		"concurrently": "^6.2.0",
 		"connect-session-sequelize": "^7.1.1",
@@ -29,6 +30,7 @@
 		"express": "^4.17.1",
 		"express-session": "^1.17.2",
 		"if-env": "^1.0.4",
+		"jsonwebtoken": "^8.5.1",
 		"mysql2": "^2.2.5",
 		"nodemon": "^2.0.9",
 		"sequelize": "^6.6.5"
@@ -46,5 +48,5 @@
 		"tabWidth": 4,
 		"printWidth": 160
 	},
-	"c": "proxy"
+	"proxy": "http://localhost:3001"
 }
